# BCISGradeViewer-app

./: README.md
.github/workflows/: tests.yml  tests_server.yml
client-native/: App.tsx  app.json  package.json
client-native/assets/images/: hello.json
client-native/components/: Button.tsx
client-native/components/Auth/: Background.tsx  Header.tsx  Hello.tsx  TextInput.tsx
client-native/constants/: Theme.ts
client-native/hooks/: useCachedResources.ts  useTheme.ts
client-native/navigation/: LinkingConfiguration.ts  index.tsx  types.tsx
client-native/screens/: Home.tsx
client-native/screens/Auth/: Login.tsx
server/: pyproject.toml
server/server/: config.py  dependencies.py  exceptions.py  main.py  security.py
server/server/routers/: root.py  token.py  user.py
server/server/scraper/: parent.py  student.py  user.py  website.py
server/server/sql/: crud.py  database.py  models.py  schemas.py
server/tests/: test_scraper.py  test_security.py  test_server.py
