[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Parinz <parinzee@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.2"
uvicorn = "^0.15.0"
orjson = "^3.6.4"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
lxml = "^4.6.3"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
SQLAlchemy = "^1.4.25"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.9b0", allow-prereleases = true}
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "server.main:run_app"